--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Zack&#39;s Minimalist Portfolio- Shareable </title>
+  <title>Reason &amp; Resolution</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
 
 <link rel="icon" href="https://i.ibb.co/m0H31pV/favicon-32x32.png" type="image/png">
