--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Reason &amp; Resolution</title>
+  <title>Zack&#39;s Minimalist Portfolio- Shareable BACKUP BACKUP BACKUP 111124</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
-
-<link rel="icon" href="https://i.ibb.co/m0H31pV/favicon-32x32.png" type="image/png">
-
-
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,6 +23,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=PT+Mono:ital,wght@0,400;1,400&display=swap" rel="stylesheet" />
+
+<link rel="icon" href="https://i.ibb.co/m0H31pV/favicon-32x32.png" type="image/png">
 </head><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -845,7 +843,8 @@ AI will never have the patience required (nor physical dexterity) to run and ter
                 <h3>FlightPath, New York, NY</h3>
                 <p><strong>"Digital Designer</strong> (full-time) • 10.5.2018 - 1.7.2020</p>
                 <ul>
-                  <li>Championed best-practice UX for clients in Pharmaceutical {Merck Animal Health}, Telecommunications {Charter}, Philanthropic/Scientific {The Dana Foundation},  and E-commerce {Goya}</li>
+                  <li>Championed best-practice UX for clients in Pharmaceutical {Merck Animal Health}, Telecommunications {Charter}, Philanthropic/Scientific {The Dana Foundation}, 
+and E-commerce {Goya}</li>
                 </ul>
               </div><br><br>
 
