--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Zack&#39;s Minimalist Portfolio- Shareable BACKUP BACKUP BACKUP 111124</title>
+  <title>Minimalist UX Portfolio - Saturday 110924 Edits</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,8 +23,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=PT+Mono:ital,wght@0,400;1,400&display=swap" rel="stylesheet" />
-
-<link rel="icon" href="https://i.ibb.co/m0H31pV/favicon-32x32.png" type="image/png">
 </head><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -33,8 +31,6 @@
 <html lang="en">
   <body>
 
-
-<!--Cursor Test -->
 
 <svg xmlns="http://www.w3.org/2000/svg" class="goo" version="1.1" width="100%">
     <defs>
@@ -47,8 +43,6 @@
 </svg>
 
 
-
-<div id="cursor"></div>
 
 
       <ol id="nav">
@@ -93,22 +87,13 @@
               <br>
               <br>
 
-<li alt="[Without Ego]">
-    Nay — this is an honest website. This website shares with you my professional journey, 
-    <a href="#" class="modal-link" id="sans-hubris" data-image="https://i.ibb.co/B6vFwH6/zoom-zack.gif">
-        sans hubris
-    </a>
-</li>
-<div class="image-preview" id="image-preview"></div>
-
-
-
-<!--
               <ul>
-                <li alt="[Without Ego]">Nay — this is an honest website. This website shares wth you my professional journey, <a href="#" class="modal-link" id="sans-hubris" data-image="https://i.ibb.co/KLPDrZQ/image-5-Copy.png">sans hubris</a>
+                <li alt="[Without Ego]">Nay — this is an honest website. This website shares wth you my professional journey, <a href="#" class="modal-link" id="sans-hubris"
+                    data-image="https://i.ibb.co/KLPDrZQ/image-5-Copy.png">sans hubris
+                  </a>
                 </li>
               </ul>
--->
+
 
             <!-- [Signature SVG here] -->
           </div>
@@ -244,7 +229,7 @@
         <!-- Left Rail with Chapter Titles -->
         <nav id="left-rail">
           <ul class="chapter-nav">
-            <li><a href="#chapter1">Introduction</a></li>
+            <li><a href="#chapter1">Intro / TL;DR</a></li>
             <li><a href="#chapter2">The Impetus</a></li>
             <li><a href="#chapter3">Art School "Stop Out"</a></li>
             <li><a href="#chapter4">Doings of an Autodidact</a></li>
@@ -719,6 +704,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 <img src="https://i.ibb.co/ZJwdQTK/2318713579686042693-5144774570.jpg" alt="Project Photo" class="section-gallery--cardimg" />
 <img src="https://i.ibb.co/VJQB4nT/2319418722844813779-5144774570.jpg" alt="Project Photo" class="section-gallery--cardimg" />
 <img src="https://i.ibb.co/0ZWH7cT/2321673929708515123-5144774570.jpg" alt="Project Photo" class="section-gallery--cardimg" />
+
 <img src="https://i.ibb.co/SBBFq8g/2321694150817073052-5144774570.jpg" alt="Project Photo" class="section-gallery--cardimg" />
 <img src="https://i.ibb.co/BjZQ8KG/2322060064540385797-5144774570.jpg" alt="Project Photo" class="section-gallery--cardimg" />
 <img src="https://i.ibb.co/HpVBDQG/2323437386397115778-5144774570.jpg" alt="Project Photo" class="section-gallery--cardimg" />
@@ -772,18 +758,14 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 <br><br>
                   <h1>Zachary R Gort</h1>
                   <p>New York City, New York • <a href="https://linkedin.com/in/zackgort">linkedin.com/in/zackgort</a> • <a href="https://reasonandresolution.com">reasonandresolution.com</a></p>
-
-
-
-<br><br>               
+               <br>
 
               <h2><span class="span">UX, Visual, & Technical SaaS Product Designer</span></h2>
 
               <p>Specializing in Visual Digital Design Systems, Digital Branding, and Information Architecture for B2C & B2B E-commerce and Enterprise SaaS Financial Applications.</p>
               <p>While my career has focused on the technical aspects of design, I thrive as a creative contributor and collaborator, offering full-spectrum support in concept ideation and creative direction, as well as hands-on and pixel-perfect execution as a graphic and visual designer at heart.</p>
               <p>I have worked with world-class agencies for world-renowned brands, gaining experience to navigate new career horizons. I seek a position that allows me to bring innovation and delight to end-users and colleagues alike.</p>
-           
-<br><br>    </section>
+            </section>
 
 
             <section class="experience section">
@@ -792,7 +774,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>Publicis Sapient, New York, NY</h3>
-                <p><strong>Senior User Experience Designer II</strong> (full-time) • 4.25.2022 - 3.17.2023</p>
+                <p><strong>Senior User Experience Designer II</strong> • 4.25.2022 - 3.17.2023</p>
                 <ul>
                   <li>Led the BNY Mellon project, serving as interim Product Owner and primary client liaison.</li>
                   <li>Delivered data-driven improvements to the design system, driving measurable UX outcomes.</li>
@@ -802,7 +784,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>Code And Theory, New York, NY</h3>
-                <p><strong>Senior Interaction Designer</strong> (contract) • 8.18.2021 - 4.04.2022</p>
+                <p><strong>Senior Interaction Designer (contract)</strong> • 8.18.2021 - 4.04.2022</p>
                 <ul>
                   <li>Mentored junior designers and optimized B2B strategies for TikTok For Business.</li>
                   <li>Conducted workshops and internal knowledge-sharing sessions on emerging UX technologies.</li>
@@ -812,7 +794,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>Elva Design Group, San Francisco, CA</h3>
-                <p><strong>Senior User Experience Designer</strong> (contract) • 4.01.2021 - 8.01.2021</p>
+                <p><strong>Senior User Experience Designer (contract)</strong> • 4.01.2021 - 8.01.2021</p>
                 <ul>
                   <li>Developed a mobile-first E-commerce navigation schema for GNC, aligning design with business KPIs.</li>
                   <li>Applied object-oriented methodologies to optimize content architecture and improve UX performance.</li>
@@ -822,7 +804,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>HUGE Inc., Brooklyn, NY</h3>
-                <p><strong>Senior User Experience Designer</strong> (contract) • 3.5.2021 - 3.26.2021</p>
+                <p><strong>Senior User Experience Designer (contract)</strong> • 3.5.2021 - 3.26.2021</p>
                 <ul>
                   <li>Provided UX support & prototypes; led client workshops for Sentral.com.</li>
                   <li>Consulted on various aspects of project-phases including: {Brand Activation Strategy, Competitive Analysis, Heuristic Review, MVP & Future-State Strategy, User-Testing & Feature Prototyping}</li>
@@ -831,7 +813,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>PFSWeb Livearea, New York, NY</h3>
-                <p><strong>Manager, UX</strong> (full-time) • 1/27/2020 - 2.16.2021</p>
+                <p><strong>Manager, UX (full-time)</strong> • 1/27/2020 - 2.16.2021</p>
                 <ul>
                   <li>Managed UX for Salesforce and SAP Hybris e-commerce builds, supporting B2C clients like YETI and West Marine.</li>
                   <li>Increased conversion rates through data-backed design improvements and enhanced product pages.</li>
@@ -841,7 +823,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
               <div class="job">
                 <h3>FlightPath, New York, NY</h3>
-                <p><strong>"Digital Designer</strong> (full-time) • 10.5.2018 - 1.7.2020</p>
+                <p><strong>"Digital Designer"</strong> • 10.5.2018 - 1.7.2020</p>
                 <ul>
                   <li>Championed best-practice UX for clients in Pharmaceutical {Merck Animal Health}, Telecommunications {Charter}, Philanthropic/Scientific {The Dana Foundation}, 
 and E-commerce {Goya}</li>
@@ -851,7 +833,7 @@ and E-commerce {Goya}</li>
 
               <div class="job">
                 <h3>WebLinc Workarea, Philadelphia, PA</h3>
-                <p><strong>Senior User Experience Designer</strong> (full-time) • 7.3.2017 - 9.19.2018</p>
+                <p><strong>Senior User Experience Designer</strong> • 7.3.2017 - 9.19.2018</p>
                 <ul>
                   <li>Focus: SaaS E-Commerce; Wireframe Prototyping, User Interviews, Testing & Developer Hand-off</li>
                   <li>B2B & B2C clients include: {Rachel Roy / Century 21 Fashion / WoodCraft / Paragon Sports}</li>
@@ -860,7 +842,7 @@ and E-commerce {Goya}</li>
 
               <div class="job">
                 <h3>O3 World, Philadelphia, PA</h3>
-                <p><strong>User Experience Designer</strong> (full-time) • 7.27.2016 - 6.16.2017</p>
+                <p><strong>User Experience Designer</strong> • 7.27.2016 - 6.16.2017</p>
                 <ul>
                   <li>Focus:  User Experience Design within a bona-fide Agile Scrum-Led Agency Environment with a focus on Digital Products; leveraging Lean UX and Atomic Design Ethos/Methodologies</li>
                   <li>Clients included: {WOVN App (iOS), Vertex SMB, SEIC}</li>
@@ -869,7 +851,7 @@ and E-commerce {Goya}</li>
 
               <div class="job">
                 <h3>ONE SIXTY OVER NINETY, Philadelphia, PA</h3>
-                <p><strong>Interaction Designer</strong> (full-time) • 9.23.2014 - 7.9.2016</p>
+                <p><strong>Interaction Designer</strong> • 9.23.2014 - 7.9.2016</p>
                 <ul>
                   <li>Focus: Interactive & User Experience, Information Architecture, Digital Consumer Branding</li>
                   <li>Clients included: {Comcast, Philadelphia Eagles, Power Home Remodeling Group, University of Wisconsin-Madison, Kent State University, Texas A&M}</li>
@@ -878,7 +860,7 @@ and E-commerce {Goya}</li>
 
               <div class="job">
                 <h3>Leadnomics, Philadelphia, PA</h3>
-                <p><strong>Senior Web Designer</strong> (full-time) • 7.29.2011 - 9.6.2014</p>
+                <p><strong>Senior Web Designer</strong> • 7.29.2011 - 9.6.2014</p>
                 <ul>
                   <li>Responsive Web Designer with a focus on mobile-first design ethos and funnel conversion optimization serving {Insurance, Healthcare, and Financial Services}.</li>
                   <li>Design by data; partnered with Data Scientists, Marketing VP’s, and senior leadership.</li>
@@ -887,7 +869,7 @@ and E-commerce {Goya}</li>
 
               <div class="job">
                 <h3>Turn5 Inc., Malvern, PA</h3>
-                <p><strong>Senior Web Designer</strong> (full-time) • 9.8.2008 - 7.8.2011</p>
+                <p><strong>Senior Web Designer</strong> • 9.8.2008 - 7.8.2011</p>
                 <ul>
                   <li>Contributed to the growth of an E-commerce start-up that went from $10mil/year revenue to $40mil+/year revenue in the time that I was employed as team lead in the Design & Marketing department.</li>
                   <li>Owned email segmentation strategies and display ad campaigns; in tandem with physical catalog and fulfillment operations.</li>
@@ -916,10 +898,12 @@ and E-commerce {Goya}</li>
 
 
           <br><img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*6ftVCi9PiL1q47VskwMbWA.png"><br>
-               <h4><span class="span">Before you go:</span> <a href="https://github.com/user-attachments/files/17689773/Zack.Gort.UX.Resume.2024.pdf" target="_blank">please download a copy of my resumé {PDF}</a>
-</h4>
-<br><br>
 
+            <ul>
+              <li>
+                <a href="asdfasdf" target="_blank">Download PDF Resume</a>
+              </li>
+            </ul>
         </div>
       </div>
     </div>
@@ -949,11 +933,7 @@ and E-commerce {Goya}</li>
     <div class="centered-content">
 
         <h2>Walk Don't Run</h2>
-        <br>
-        <p>What started as a simple riff, developed into an idea, catalyzing a creative pathway, leading into exploration whilst dabbling with different ideas; recentering, and carrying on with gusto.</p>
-<br>
-        <p><strong>TL;DR, here's a riff along with two tasty improvised leads.</strong></p>
-<br><br>
+        <p>walkie walkie walkie</p>
 
         <div class="pill-container">
             <div class="radio audio-player">
@@ -961,33 +941,30 @@ and E-commerce {Goya}</li>
             </div>
         </div>
 
-<br><br>
-<br><br>
-        <h2>To Do & To Do It Differently</h2>
-        <br><p>This is for those right-brained folks. Please allow me to convey in a different way, my approach in all things that I find interesting.</p>
-<br><br>
-
+        <br><br>
 
         <div class="video-container">
             <iframe src="https://player.vimeo.com/video/1027503817?adge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="WaitingOnTheWorldToChangeRemix"></iframe>
-            <p class="super-small-text">Waiting On The World To Change, by John Mayer - Original Solo by Zack Gort</p>
+            <p>Waiting On The World To Change - Original Solo by Zack Gort</p>
         </div>
 <br><br>
-
+        <h2>To Do & To Do It Differently</h2>
+        <p>This is for those right-brained folks. Please allow me to convey in a different way, my approach in all things that I find interesting.</p>
+<br><br>
         <ul>
-            <li>I hope my {southpaw} six-string cover renditions convey confidence in my ability to meet expectations.</li><br>
-            <li>I hope my reworkings of my favorite solos help to convey a sense of creativity and craft.</li><br>
-            <li>I hope you enjoy my work.</li>
+            <li>I hope my guitar solo covers convey confidence in my ability to meet expectations.</li>
+            <li>I hope my solo interpretive cover conveys a sense of creativity and craft.</li>
+            <li>I hope you enjoyed my work.</li>
         </ul>
 <br><br>
         <div class="video-container">
             <iframe src="https://player.vimeo.com/video/1027503716?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="PinkFloyd-ParkBenchJam_comp"></iframe>
-            <p class="super-small-text">{Cover} Pink Floyd Time & Comfortably Numb - Solo Cover by Zack Gort</p>
+            <p>{Cover} Pink Floyd Time & Comfortably Numb - Solo Cover by Zack Gort</p>
         </div>
 <br><br>
         <div class="video-container">
             <iframe src="https://player.vimeo.com/video/1027503768?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="PinkFloydTime-Solo-Redux_comp"></iframe>
-            <p class="super-small-text">{Original} Pink Floyd Time - Solo Concept by Zack Gort</p>
+            <p>{Original} Pink Floyd Time - Solo Concept by Zack Gort</p>
         </div>
     </div> <!-- End of centered content -->
 </div>
@@ -1005,11 +982,6 @@ and E-commerce {Goya}</li>
     </a>
     <div id="small">reason &amp; resolution</div>
     </div>
-
-<p class="super-small-text">
-© Reason & Resolution, 2024. All photos belong to Zack Gort; Any works shown belongs to its respective copyright holder and are displayed here for non-commercial and/or educational purposes.
-</p>
-
 
 <!--
     <div class="container">
