--- a/index.html
+++ b/index.html
@@ -1,33 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Minimalist UX Portfolio - Saturday 110924 Edits</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-
-
-<script src="https://use.fontawesome.com/fd2263ad8f.js"></script>
-
-  <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet"> <!-- Remove if not needed -->
-
-
-<meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Reason & Resolution</title>
-  <link rel="stylesheet" href="stylesheet.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=PT+Mono:ital,wght@0,400;1,400&display=swap" rel="stylesheet" />
-</head><link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <html lang="en">
   <body>
 
@@ -99,6 +70,10 @@
           </div>
         </div>
       </div>
+
+
+
+
       <!-- Ampersand Page -->
       <div id="ampersand" class="page-content">
         <div class="container">
@@ -108,6 +83,8 @@
             <p>And, here's a button you can click on.</p>
             <br>
             <!-- Statement Generator Section -->
+
+
             <button id="generate-statement-btn" class="generate-btn">"&"</button>
             <br><br>
             <ul id="statement-list"></ul>
@@ -704,7 +681,6 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 <img src="https://i.ibb.co/ZJwdQTK/2318713579686042693-5144774570.jpg" alt="Project Photo" class="section-gallery--cardimg" />
 <img src="https://i.ibb.co/VJQB4nT/2319418722844813779-5144774570.jpg" alt="Project Photo" class="section-gallery--cardimg" />
 <img src="https://i.ibb.co/0ZWH7cT/2321673929708515123-5144774570.jpg" alt="Project Photo" class="section-gallery--cardimg" />
-
 <img src="https://i.ibb.co/SBBFq8g/2321694150817073052-5144774570.jpg" alt="Project Photo" class="section-gallery--cardimg" />
 <img src="https://i.ibb.co/BjZQ8KG/2322060064540385797-5144774570.jpg" alt="Project Photo" class="section-gallery--cardimg" />
 <img src="https://i.ibb.co/HpVBDQG/2323437386397115778-5144774570.jpg" alt="Project Photo" class="section-gallery--cardimg" />
@@ -825,8 +801,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
                 <h3>FlightPath, New York, NY</h3>
                 <p><strong>"Digital Designer"</strong> • 10.5.2018 - 1.7.2020</p>
                 <ul>
-                  <li>Championed best-practice UX for clients in Pharmaceutical {Merck Animal Health}, Telecommunications {Charter}, Philanthropic/Scientific {The Dana Foundation}, 
-and E-commerce {Goya}</li>
+                  <li>Championed best-practice UX for clients in Pharmaceutical {Merck Animal Health}, Telecommunications {Charter}, Philanthropic/Scientific {The Dana Foundation},  and E-commerce {Goya}</li>
                 </ul>
               </div><br><br>
 
@@ -896,14 +871,10 @@ and E-commerce {Goya}</li>
               <p><strong>Software:</strong> Figma, Adobe CS, Atlassian, Microsoft, Miro, with the ability to learn new protocols as required.</p>
             </section>
 
-
           <br><img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*6ftVCi9PiL1q47VskwMbWA.png"><br>
-
-            <ul>
-              <li>
-                <a href="asdfasdf" target="_blank">Download PDF Resume</a>
-              </li>
-            </ul>
+               <h4><span class="span">Before you go:</span> <a href="https://github.com/user-attachments/files/17689773/Zack.Gort.UX.Resume.2024.pdf" target="_blank">please download a copy of my resumé {PDF}</a>
+</h4>
+<br><br>
         </div>
       </div>
     </div>
@@ -933,7 +904,11 @@ and E-commerce {Goya}</li>
     <div class="centered-content">
 
         <h2>Walk Don't Run</h2>
-        <p>walkie walkie walkie</p>
+        <br>
+        <p>What started as a simple riff, developed into an idea, catalyzing a creative pathway, leading into exploration whilst dabbling with different ideas; recentering, and carrying on with gusto.</p>
+<br>
+        <p><strong>TL;DR, here's a riff along with two tasty improvised leads.</strong></p>
+<br><br>
 
         <div class="pill-container">
             <div class="radio audio-player">
@@ -941,30 +916,33 @@ and E-commerce {Goya}</li>
             </div>
         </div>
 
-        <br><br>
+<br><br>
+<br><br>
+        <h2>To Do & To Do It Differently</h2>
+        <br><p>This is for those right-brained folks. Please allow me to convey in a different way, my approach in all things that I find interesting.</p>
+<br><br>
+
 
         <div class="video-container">
             <iframe src="https://player.vimeo.com/video/1027503817?adge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="WaitingOnTheWorldToChangeRemix"></iframe>
-            <p>Waiting On The World To Change - Original Solo by Zack Gort</p>
+            <p class="super-small-text">Waiting On The World To Change, by John Mayer - Original Solo by Zack Gort</p>
         </div>
 <br><br>
-        <h2>To Do & To Do It Differently</h2>
-        <p>This is for those right-brained folks. Please allow me to convey in a different way, my approach in all things that I find interesting.</p>
-<br><br>
+
         <ul>
-            <li>I hope my guitar solo covers convey confidence in my ability to meet expectations.</li>
-            <li>I hope my solo interpretive cover conveys a sense of creativity and craft.</li>
-            <li>I hope you enjoyed my work.</li>
+            <li>I hope my {southpaw} six-string cover renditions shared on this page convey confidence in my ability to meet expectations.</li><br>
+            <li>I hope my reworkings of my favorite solos help to convey a sense of creativity and craft.</li><br>
+            <li>I hope you enjoy my work.</li>
         </ul>
 <br><br>
         <div class="video-container">
             <iframe src="https://player.vimeo.com/video/1027503716?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="PinkFloyd-ParkBenchJam_comp"></iframe>
-            <p>{Cover} Pink Floyd Time & Comfortably Numb - Solo Cover by Zack Gort</p>
+            <p class="super-small-text">{Cover} Pink Floyd Time & Comfortably Numb - Solo Cover by Zack Gort</p>
         </div>
 <br><br>
         <div class="video-container">
             <iframe src="https://player.vimeo.com/video/1027503768?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="PinkFloydTime-Solo-Redux_comp"></iframe>
-            <p>{Original} Pink Floyd Time - Solo Concept by Zack Gort</p>
+            <p class="super-small-text">{Original} Pink Floyd Time - Solo Concept by Zack Gort</p>
         </div>
     </div> <!-- End of centered content -->
 </div>
@@ -983,6 +961,11 @@ and E-commerce {Goya}</li>
     <div id="small">reason &amp; resolution</div>
     </div>
 
+<p class="super-small-text">
+  © Reason & Resolution; all photos belong to Zack Gort; all work shown belongs to their respective copyright holders and are displayed here for non-commercial and/or educational purposes.
+</p>
+
+
 <!--
     <div class="container">
     <a id="logo" class="logo collapsed footer-logo">
@@ -997,9 +980,4 @@ and E-commerce {Goya}</li>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
   </body>
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
 </html>
