--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 <br><br>
 
         <ul>
-            <li>I hope my {southpaw} six-string cover renditions shared on this page convey confidence in my ability to meet expectations.</li><br>
+            <li>I hope my {southpaw} six-string cover renditions convey confidence in my ability to meet expectations.</li><br>
             <li>I hope my reworkings of my favorite solos help to convey a sense of creativity and craft.</li><br>
             <li>I hope you enjoy my work.</li>
         </ul>
