--- a/index.html
+++ b/index.html
@@ -961,8 +961,10 @@ AI will never have the patience required (nor physical dexterity) to run and ter
     <div id="small">reason &amp; resolution</div>
     </div>
 
+
 <p class="super-small-text">
-  © Reason & Resolution; all photos belong to Zack Gort; all work shown belongs to their respective copyright holders and are displayed here for non-commercial and/or educational purposes.
+2024 © REASON & RESOLUTION; a UX design portfolio by Zack Gort (all photos belong to Zack G.)
+<br><a href="https://codepen.io/zackgort/pen/yLmQore">My CodePen Fork</a>, which is a Fork of an original work <a href="https://codepen.io/massiebn/pen/bGEBgK">Minimal Navigation</a>
 </p>
 
 
