--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <body>
 
@@ -930,7 +929,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 <br><br>
 
         <ul>
-            <li>I hope my {southpaw} six-string cover renditions convey confidence in my ability to meet expectations.</li><br>
+            <li>I hope my {southpaw} six-string cover renditions shared on this page convey confidence in my ability to meet expectations.</li><br>
             <li>I hope my reworkings of my favorite solos help to convey a sense of creativity and craft.</li><br>
             <li>I hope you enjoy my work.</li>
         </ul>
@@ -961,10 +960,8 @@ AI will never have the patience required (nor physical dexterity) to run and ter
     <div id="small">reason &amp; resolution</div>
     </div>
 
-
 <p class="super-small-text">
-2024 © REASON & RESOLUTION; a UX design portfolio by Zack Gort (all photos belong to Zack G.)
-<br><a href="https://codepen.io/zackgort/pen/yLmQore">My CodePen Fork</a>, which is a Fork of an original work <a href="https://codepen.io/massiebn/pen/bGEBgK">Minimal Navigation</a>
+  © Reason & Resolution; all photos belong to Zack Gort; all work shown belongs to their respective copyright holders and are displayed here for non-commercial and/or educational purposes.
 </p>
 
 
