--- a/index.html
+++ b/index.html
@@ -1,3 +1,35 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Zack&#39;s Minimalist Portfolio-  GOOD WORKING MODEL SUNDAY 111024</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
+
+<script src="https://use.fontawesome.com/fd2263ad8f.js"></script>
+
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet"> <!-- Remove if not needed -->
+
+
+<meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Reason & Resolution</title>
+  <link rel="stylesheet" href="stylesheet.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=PT+Mono:ital,wght@0,400;1,400&display=swap" rel="stylesheet" />
+
+<link rel="icon" href="https://i.ibb.co/m0H31pV/favicon-32x32.png" type="image/png">
+</head><link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <html lang="en">
   <body>
 
@@ -69,10 +101,6 @@
           </div>
         </div>
       </div>
-
-
-
-
       <!-- Ampersand Page -->
       <div id="ampersand" class="page-content">
         <div class="container">
@@ -82,8 +110,6 @@
             <p>And, here's a button you can click on.</p>
             <br>
             <!-- Statement Generator Section -->
-
-
             <button id="generate-statement-btn" class="generate-btn">"&"</button>
             <br><br>
             <ul id="statement-list"></ul>
@@ -870,7 +896,9 @@ AI will never have the patience required (nor physical dexterity) to run and ter
               <p><strong>Software:</strong> Figma, Adobe CS, Atlassian, Microsoft, Miro, with the ability to learn new protocols as required.</p>
             </section>
 
+
           <br><img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*6ftVCi9PiL1q47VskwMbWA.png"><br>
+
                <h4><span class="span">Before you go:</span> <a href="https://github.com/user-attachments/files/17689773/Zack.Gort.UX.Resume.2024.pdf" target="_blank">please download a copy of my resumé {PDF}</a>
 </h4>
 <br><br>
@@ -929,7 +957,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 <br><br>
 
         <ul>
-            <li>I hope my {southpaw} six-string cover renditions shared on this page convey confidence in my ability to meet expectations.</li><br>
+            <li>I hope my {southpaw} guitar solo covers convey confidence in my ability to meet expectations.</li><br>
             <li>I hope my reworkings of my favorite solos help to convey a sense of creativity and craft.</li><br>
             <li>I hope you enjoy my work.</li>
         </ul>
@@ -961,8 +989,10 @@ AI will never have the patience required (nor physical dexterity) to run and ter
     </div>
 
 <p class="super-small-text">
-  © Reason & Resolution; all photos belong to Zack Gort; all work shown belongs to their respective copyright holders and are displayed here for non-commercial and/or educational purposes.
+2024 © REASON & RESOLUTION; a UX design portfolio by Zack Gort (all photos belong to Zack G.)
+<br><a href="https://codepen.io/zackgort/pen/yLmQore">My CodePen Fork</a>, which is a Fork of an original work <a href="https://codepen.io/massiebn/pen/bGEBgK">Minimal Navigation</a>
 </p>
+
 
 
 <!--
@@ -979,4 +1009,9 @@ AI will never have the patience required (nor physical dexterity) to run and ter
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
   </body>
+</html>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
 </html>
