--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 <html lang="en">
   <body>
 
-
 <svg xmlns="http://www.w3.org/2000/svg" class="goo" version="1.1" width="100%">
     <defs>
         <filter id="goo">
@@ -44,6 +43,7 @@
     </defs>
 </svg>
 
+<div id="cursor"></div>
 
 
 
