--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Zack&#39;s Minimalist Portfolio-  GOOD WORKING MODEL SUNDAY 111024</title>
+  <title>Reason & Resolution — a UX Portfolio by Zack Gort</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
