--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
               <br>
 
               <ul>
-                <li alt="[Without Ego]">Nay — this is an honest website. This website shares wth you my professional journey, <a href="#" class="modal-link" id="sans-hubris"
+                <li alt="[Without Ego]">Nay — this is an honest website. This website shares wth you my professional journey, sans hubris</li></a> <!-- <a href="#" class="modal-link" id="sans-hubris"
                     data-image="https://i.ibb.co/KLPDrZQ/image-5-Copy.png">sans hubris
                   </a>
-                </li>
+                </li> -->
               </ul>
 
 
