--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 
 <p class="super-small-text">
 2024 © REASON & RESOLUTION; a UX design portfolio by Zack Gort (all photos belong to Zack G.)
-<br><a href="https://codepen.io/zackgort/pen/yLmQore">My CodePen Fork</a>, which is a Fork of an original work <a href="https://codepen.io/massiebn/pen/bGEBgK">Minimal Navigation</a>
+<br><a href="https://codepen.io/zackgort/pen/yLmQore">My CodePen Fork</a>, which was inspired by this <a href="https://codepen.io/massiebn/pen/bGEBgK">Minimal Navigation</a>
 </p>
 
 
