--- a/index.html
+++ b/index.html
@@ -42,17 +42,20 @@
         </filter>
     </defs>
 </svg>
-
 <div id="cursor"></div>
 
 
 
-      <ol id="nav">
-<div class="logo float-shadow" id="logo">
-  <a href="#" data-page="reason-and-resolution">
-     <img src="https://i.ibb.co/CbNPmgs/reasonandresolution-logo-PNG.png" alt="Logo" width="40" height="40" class="logo-image">
-  </a>
-</div>
+
+<ol id="nav">
+  <div class="container">
+    <a id="logo" class="logo float-shadow footer-logo" href="#" data-page="reason-and-resolution">
+      <img src="https://i.ibb.co/CbNPmgs/reasonandresolution-logo-PNG.png" alt="Logo" width="40" height="40" class="logo-image">
+    </a>
+    <div id="small">Reason &amp; Resolution</div>
+  </div>
+</ol>
+
 
 
 
