--- a/index.html
+++ b/index.html
@@ -1,37 +1,6 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Reason & Resolution — a UX Portfolio by Zack Gort</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-
-
-<script src="https://use.fontawesome.com/fd2263ad8f.js"></script>
-
-  <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet"> <!-- Remove if not needed -->
-
-
-<meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Reason & Resolution</title>
-  <link rel="stylesheet" href="stylesheet.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=PT+Mono:ital,wght@0,400;1,400&display=swap" rel="stylesheet" />
-
-<link rel="icon" href="https://i.ibb.co/m0H31pV/favicon-32x32.png" type="image/png">
-</head><link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <html lang="en">
   <body>
+
 
 <svg xmlns="http://www.w3.org/2000/svg" class="goo" version="1.1" width="100%">
     <defs>
@@ -42,20 +11,17 @@
         </filter>
     </defs>
 </svg>
+
 <div id="cursor"></div>
 
 
 
-
-<ol id="nav">
-  <div class="container">
-    <a id="logo" class="logo float-shadow footer-logo" href="#" data-page="reason-and-resolution">
-      <img src="https://i.ibb.co/CbNPmgs/reasonandresolution-logo-PNG.png" alt="Logo" width="40" height="40" class="logo-image">
-    </a>
-    <div id="small">Reason &amp; Resolution</div>
-  </div>
-</ol>
-
+      <ol id="nav">
+<div class="logo float-shadow" id="logo">
+  <a href="#" data-page="reason-and-resolution">
+     <img src="https://i.ibb.co/CbNPmgs/reasonandresolution-logo-PNG.png" alt="Logo" width="40" height="40" class="logo-image">
+  </a>
+</div>
 
 
 
@@ -93,10 +59,10 @@
               <br>
 
               <ul>
-                <li alt="[Without Ego]">Nay — this is an honest website. This website shares wth you my professional journey, sans hubris.</li></a> <!-- <a href="#" class="modal-link" id="sans-hubris"
+                <li alt="[Without Ego]">Nay — this is an honest website. This website shares wth you my professional journey, <a href="#" class="modal-link" id="sans-hubris"
                     data-image="https://i.ibb.co/KLPDrZQ/image-5-Copy.png">sans hubris
                   </a>
-                </li> -->
+                </li>
               </ul>
 
 
@@ -104,6 +70,10 @@
           </div>
         </div>
       </div>
+
+
+
+
       <!-- Ampersand Page -->
       <div id="ampersand" class="page-content">
         <div class="container">
@@ -113,6 +83,8 @@
             <p>And, here's a button you can click on.</p>
             <br>
             <!-- Statement Generator Section -->
+
+
             <button id="generate-statement-btn" class="generate-btn">"&"</button>
             <br><br>
             <ul id="statement-list"></ul>
@@ -899,9 +871,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
               <p><strong>Software:</strong> Figma, Adobe CS, Atlassian, Microsoft, Miro, with the ability to learn new protocols as required.</p>
             </section>
 
-
           <br><img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*6ftVCi9PiL1q47VskwMbWA.png"><br>
-
                <h4><span class="span">Before you go:</span> <a href="https://github.com/user-attachments/files/17689773/Zack.Gort.UX.Resume.2024.pdf" target="_blank">please download a copy of my resumé {PDF}</a>
 </h4>
 <br><br>
@@ -960,7 +930,7 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 <br><br>
 
         <ul>
-            <li>I hope my {southpaw} guitar solo covers convey confidence in my ability to meet expectations.</li><br>
+            <li>I hope my {southpaw} six-string cover renditions shared on this page convey confidence in my ability to meet expectations.</li><br>
             <li>I hope my reworkings of my favorite solos help to convey a sense of creativity and craft.</li><br>
             <li>I hope you enjoy my work.</li>
         </ul>
@@ -992,10 +962,9 @@ AI will never have the patience required (nor physical dexterity) to run and ter
     </div>
 
 <p class="super-small-text">
-2024 © REASON & RESOLUTION; a UX design portfolio by Zack Gort (all photos belong to Zack G.)
-<br><a href="https://codepen.io/zackgort/pen/yLmQore">My CodePen Fork</a>, which was inspired by this <a href="https://codepen.io/massiebn/pen/bGEBgK">Minimal Navigation</a>
+    2024 © REASON & RESOLUTION; a UX design portfolio by Zack Gort (all photos belong to Zack G.)
+    <br><a href="https://codepen.io/zackgort/pen/yLmQore" target="_blank">My CodePen Fork</a>, which is a Fork of an original work <a href="https://codepen.io/massiebn/pen/bGEBgK" target="_blank">Minimal Navigation</a>
 </p>
-
 
 
 <!--
@@ -1008,15 +977,8 @@ AI will never have the patience required (nor physical dexterity) to run and ter
 -->
 
     </footer>
-<br><br>
-<br><br>
     <!-- Include jQuery and your JavaScript file -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
   </body>
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
 </html>
