--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                <h4><span class="span">Reason</span> is the power of the mind to think, understand, and form <s>judgments by</s> a process of logic.</h4>
             </ul>
             <br>
-            <p>Fittingly, this website was handcrafted not with love, but with implicit intent. It was not designed to delight, but to advocate for criticality. It makes no attempt to fool your senses or sensibilities. It seeks not your 'oohs-and-ahhs'.
+            <p>Fittingly, this website was <strong>handcrafted</strong> not with love, but with implicit intent. It was not designed to delight, but to advocate for criticality. It makes no attempt to fool your senses or sensibilities. It seeks not your 'oohs-and-ahhs'.
               <br>
               <br>
 
